tests/parsing/smtlib/v2.6/errors/017_sorted_var_bad_name_2.expected
File "tests/parsing/smtlib/v2.6/errors/017_sorted_var_bad_name_2.smt2", line 2, character 18-20:
2 | (assert (forall ((as int)) true))
                      ^^
Error while parsing a sorted variable, read the reserved word 'as',
      but expected a symbol, i.e. a variable name.
